--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.linkedin.com/in/jaswanth333/"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://github.com/jaswanth333"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -93,51 +94,28 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" class="work" style="background-image: url(images/portfolio-1.jpg);">
+				<div class="col-md-4 text-center col-padding animate-box">
+					<a href="https://github.com/jaswanth333/Big-Data-Analysis-of-Spotify-Music" class="work" style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
-							<h3>Crime statistics</h3>
-							<span>Tableau</span>
+							<h3>Spotify Music Big Data Analysis</h3>
+							<span>PySpark, Azure, Docker, MongoDB</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" class="work" style="background-image: url(images/portfolio-2.jpg);">
+
+				<div class="col-md-4 text-center col-padding animate-box">
+					<a href="https://github.com/jaswanth333/dbt-dimensional-modeling" class="work" style="background-image: url(images/portfolio-2.PNG);">
 						<div class="desc">
-							<h3>Political Donations</h3>
-							<span>Tableau</span>
+							<h3>Data Modeling with Modern DE Stack </h3>
+							<span>DBT, Postgres, MSSQL, Airbyte</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" class="work" style="background-image: url(images/portfolio-3.jpg);">
+				<div class="col-md-4 text-center col-padding animate-box">
+					<a href="https://github.com/jaswanth333/us-flight-traffic-data-analysis" class="work" style="background-image: url(images/portfolio-3.JPG);">
 						<div class="desc">
-							<h3>Chess Openings</h3>
-							<span>Pandas</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" class="work" style="background-image: url(images/portfolio-4.jpg);">
-						<div class="desc">
-							<h3>Adidas Sales Analysis</h3>
-							<span>Excel</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" class="work" style="background-image: url(images/portfolio-5.JPG);">
-						<div class="desc">
-							<h3>Morse Code Translator</h3>
-							<span>Python</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" class="work" style="background-image: url(images/portfolio-6.JPG);">
-						<div class="desc">
-							<h3>House Price Prediction</h3>
-							<span>Machine Learning</span>
+							<h3>US Flight Traffic Analysis</h3>
+							<span>R, Machine Learning</span>
 						</div>
 					</a>
 				</div>
@@ -166,7 +144,7 @@
 									<span class="company">Brainy n Bright Inc. -Jan 2023 - May 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Developed collaborative-based course recommendation system using SVD model and built dashbaords for data-driven decision making.</p>
 								</div>
 							</div>
 						</li>
@@ -175,10 +153,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Data Analyst/Engineer</h3>
-									<span class="company">Tata Consultancy Services - 2018 - 2021</span>
+									<span class="company">Tata Consultancy Services - Nov 2018 - Sept 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Implemented ETL pipelines and integrated 6 SAP applications into Dynatrace for business intelligence reporting by performing data mapping on XML data.</p>
 								</div>
 							</div>
 						</li>
@@ -187,10 +165,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Data Analyst</h3>
-									<span class="company">Logic Matter - 2018 - 2018</span>
+									<span class="company">Logic Matter - Mar 2018 - May 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Collaborated with cross-functional teams to gather, clean, and organize data for analysis.</p>
 								</div>
 							</div>
 						</li>
@@ -207,7 +185,7 @@
 									<span class="company">George Mason University - 2021 - 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Data Analytics Engineering</p>
 								</div>
 							</div>
 						</li>
@@ -219,7 +197,7 @@
 									<span class="company">GITAM University - 2015 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Computer Science Engineering</p>
 								</div>
 							</div>
 						</li>
@@ -245,7 +223,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Commnication & Presentation</h3>
-								<p>Present complex information to stakeholders of varying technical understandin</p>
+								<p>Present complex information to stakeholders of varying technical understanding</p>
 							</div>
 						</div>
 					</div>
@@ -310,7 +288,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Technical</h3>
-								<p>Excel, SQL, Excel, Python (Pandas & Numpy)</p>
+								<p>Excel, SQL, Python, R, Tableau, Power BI, Alteryx, PySpark, JIRA</p>
 							</div>
 						</div>
 					</div>
@@ -327,7 +305,7 @@
 			<h2>Contact</h2>
 			<form method="post" action="https://forms.un-static.com/forms/cc1bd10cde057fcbb54d4649f80e1418bf47226e">
 				<div class="row form-group">
-					<div class="col-md-6">
+					<div class="col-md-12">
 						<input type="text" id="fname" name="Name" class="form-control" placeholder="Your Name">
 					</div>
 				</div>
@@ -356,7 +334,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p text-align="center">&copy; 2023  All Rights Reserved. Designed by Jaswanth Kumar</p>
+					<p class="text-center">&copy; 2023  All Rights Reserved. Designed by Jaswanth Kumar</p>
 				</div>
 			</div>
 		</div>
