--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</div>
 
 				<div class="col-md-4 text-center col-padding animate-box">
-					<a href="https://github.com/jaswanth333/dbt-dimensional-modeling" class="work" style="background-image: url(images/portfolio-2.PNG);">
+					<a href="https://github.com/jaswanth333/dbt-dimensional-modeling" class="work" style="background-image: url(images/portfolio-2.png);">
 						<div class="desc">
 							<h3>Data Modeling with Modern DE Stack </h3>
 							<span>DBT, Postgres, MSSQL, Airbyte</span>
@@ -112,7 +112,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center col-padding animate-box">
-					<a href="https://github.com/jaswanth333/us-flight-traffic-data-analysis" class="work" style="background-image: url(images/portfolio-3.JPG);">
+					<a href="https://github.com/jaswanth333/us-flight-traffic-data-analysis" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>US Flight Traffic Analysis</h3>
 							<span>R, Machine Learning</span>
